<resources>
    <string name="app_name">UnsplashProject</string>
    <string name="title_Latest">Latest</string>
    <string name="title_random_picture">Random</string>
    <string name="title_setting">Setting</string>
    <string name="input_text">Photo Search Input</string>

    <string name="button_search">search</string>
    <string name="button_clear">clear</string>
    <string name="button_join">Join</string>
    <string name="button_login">Lon in</string>

    <string name="latest_app_bar_name">LatestPicture</string>

    <string name="input_user_id">Input User ID</string>
    <string name="input_user_pw">Input User PW</string>

    <string name="dont_have_accout">Don`t have an account?</string>


    <string name="app_bar_title">Log in</string>
    <string name="not_grant_permission">권한 비 허가</string>
    <string name="need_permision">사진을 다운받기 위해서는 권한이 필요합니다.
        권한을 거부 할경우 앱이 종료 됩니다.
    </string>

    <string name="show_Random_Picture">RandomPicture</string>
</resources>
