<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.home.loginview.LoginActivity">
    <android.support.design.widget.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/search_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
        <android.support.v7.widget.Toolbar android:layout_width="match_parent"
                                           android:layout_height="?attr/actionBarSize"
                                           app:contentInsetStart="0dp"
                                           app:contentInsetEnd="0dp"
                                           android:background="#6200EE">

            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/img_close_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_cancel_white_24dp"/>
                <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_bar_title"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="280dp"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginTop="80dp"
                                                   android:id="@+id/tv_user_id_layout"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/search_app_bar"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:id="@+id/tv_user_id"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/input_user_id"
                                                         android:imeOptions="actionSearch"
                                                         android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="280dp"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tv_user_pw_layout"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/tv_user_id_layout"
                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:id="@+id/tv_user_pw"
                                                         android:inputType="textPassword"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/input_user_pw"
                                                         android:imeOptions="actionSearch"
                                                         android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="280dp"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginTop="400dp"
                                                   android:id="@+id/tv_user_name_layout"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/search_app_bar"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:id="@+id/tv_user_name"
                                                         android:layout_height="wrap_content"
                                                         android:hint="이름 입력"
                                                         android:imeOptions="actionSearch"
                                                         android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="280dp"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginTop="500dp"
                                                   android:id="@+id/tv_user_correct_password_layout"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/search_app_bar"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:id="@+id/tv_user_correct_password"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/input_user_id"
                                                         android:imeOptions="actionSearch"
                                                         android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_Bar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button android:layout_width="130dp" android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/button_login"
            android:textSize="16sp"
            android:id="@+id/btn_login"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_user_pw_layout"/>
    <TextView
            android:text="@string/dont_have_accout"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="108dp"
            android:textStyle="bold" android:layout_marginBottom="284dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button android:layout_width="130dp" android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/button_join"
            android:textSize="16sp"
            android:id="@+id/btn_join"
            android:layout_marginBottom="268dp"
            android:layout_marginRight="64dp"/>
</android.support.constraint.ConstraintLayout>